# utadvisor-cs

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: cs_utexas_edu_domain_data.json  cse_osu_edu_domain_data.json  domain_data.json  learn_multithreading.ipynb  pinecone.ipynb  scraperapi.ipynb  scraperapi_general.ipynb
src/: streamlit_app.py
tests/: __init__.py
