[tool.poetry]
name = "utadvisor-cs"
version = "0.1.0"
description = "Streamit RAG undergrad AI advisor for UTA CS program, utilizing LangChain, Openai, and Pinecone."
authors = ["Keming He <keminghe.career@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
streamlit = "^1.39.0"
pinecone = "^5.3.1"
langchain-pinecone = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
